--- a/index-START.html
+++ b/index-START.html
@@ -227,14 +227,13 @@
 
   function handleEnter() {
     this.classList.add('trigger-enter');
-    setTimeout(() => {
-      console.log(this);
-      this.classList.add('trigger-enter-active');
-    }, 150);
-  }
+    setTimeout(() => this.classList.add('trigger-enter-active'), 150)
+    background.classList.add('open');
+  };
 
   function handleLeave() {
-    console.log('LEAVE!!!');
+    this.classList.remove('trigger-enter', 'trigger-enter-active');
+    background.classList.remove('open');
 
   }
 
