--- a/index-START.html
+++ b/index-START.html
@@ -229,7 +229,12 @@
     this.classList.add('trigger-enter');
     setTimeout(() => this.classList.add('trigger-enter-active'), 150)
     background.classList.add('open');
-  };
+
+    const dropdown = this.querySelector('.dropdown');
+
+    const dropdownCoords = dropdown.getBoundingClientRect();
+    console.log(dropdownCoords);
+  }
 
   function handleLeave() {
     this.classList.remove('trigger-enter', 'trigger-enter-active');
