--- a/index-START.html
+++ b/index-START.html
@@ -230,7 +230,11 @@
 
   function handleEnter() {
     this.classList.add('trigger-enter');
-    setTimeout(() => this.classList.add('trigger-enter-active'), 150)
+    setTimeout(() => {
+      if(this.classList.contains('trigger-enter')) {
+        this.classList.add('trigger-enter-active')
+      }
+    }, 150)
     background.classList.add('open');
 
     const dropdown = this.querySelector('.dropdown');
@@ -243,7 +247,7 @@
       height: dropdownCoords.height,
       width: dropdownCoords.width,
       top: dropdownCoords.top - navCoords.top,
-      left: dropdownCoords.left,
+      left: dropdownCoords.left - navCoords.left,
     };
 
     background.style.setProperty('width', `${coords.width}px`);
